修改筛选动态接口代码。