@@ -11,7 +11,6 @@ rm -rf ~/jar/*.jar
 mv find-admin/target/*.jar ~/jar/
 mv find-config/target/*.jar ~/jar/
 mv find-dynamic/target/*.jar ~/jar/
-mv find-log/target/*.jar ~/jar/
 mv find-message/target/*.jar ~/jar/
 mv find-order/target/*.jar ~/jar/
 mv find-portal/target/*.jar ~/jar/
@@ -30,5 +29,4 @@ nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMa
 nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8084 find-portal-8084.jar >find-portal-8084.log 2>&1 &
 nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8085 find-admin-8085.jar >find-admin-8085.log 2>&1 &
 nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8086 find-order-8086.jar >find-order-8086.log 2>&1 &
-nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8087 find-log-8087.jar >find-log-8087.log 2>&1 &
 nohup java -jar -server -Xmx64m -Xss8m -Xms1m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8088 find-config-8088.jar >find-config-8088.log 2>&1 &
